--- a/PositionIn/ProductDetails/PositionIn.ProductDetailsViewController.xib
+++ b/PositionIn/ProductDetails/PositionIn.ProductDetailsViewController.xib
@@ -10,6 +10,8 @@
                 <outlet property="detailsLabel" destination="gro-Dr-DFI" id="TVQ-Mz-Lhk"/>
                 <outlet property="headerLabel" destination="ati-oP-ynl" id="rDW-Jj-Uwt"/>
                 <outlet property="infoLabel" destination="QaN-CP-TKD" id="Hrj-OP-1Kk"/>
+                <outlet property="nameLabel" destination="Yjp-Xw-pBL" id="sWo-fu-La9"/>
+                <outlet property="priceLabel" destination="8Qb-Kh-vAf" id="F1X-WB-4LX"/>
                 <outlet property="productImageView" destination="djR-mn-LSG" id="zPL-7a-zgn"/>
                 <outlet property="view" destination="UuP-rw-UeB" id="gx2-S8-xVa"/>
             </connections>
@@ -20,30 +22,30 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BigPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="djR-mn-LSG">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="150"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="220"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="150" id="H8t-zH-e1y"/>
+                        <constraint firstAttribute="height" constant="220" id="H8t-zH-e1y"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PoZ-37-1wp">
-                    <rect key="frame" x="0.0" y="150" width="600" height="94"/>
+                    <rect key="frame" x="0.0" y="220" width="600" height="101"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Forest" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ati-oP-ynl">
-                            <rect key="frame" x="10" y="10" width="580" height="20"/>
-                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                            <rect key="frame" x="10" y="10" width="580" height="26"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="21"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0.09 miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QaN-CP-TKD">
-                            <rect key="frame" x="10" y="39" width="580" height="17"/>
-                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.09 miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QaN-CP-TKD">
+                            <rect key="frame" x="10" y="46" width="580" height="18"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                             <color key="textColor" red="0.63529411759999999" green="0.72549019609999998" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Edward Ryan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gro-Dr-DFI">
-                            <rect key="frame" x="10" y="66" width="580" height="17"/>
-                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                            <color key="textColor" red="0.61176470589999998" green="0.61176470589999998" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edward Ryan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gro-Dr-DFI">
+                            <rect key="frame" x="10" y="74" width="580" height="17"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
+                            <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
@@ -61,11 +63,30 @@
                         <constraint firstItem="QaN-CP-TKD" firstAttribute="leading" secondItem="gro-Dr-DFI" secondAttribute="leading" id="zwt-ZE-b2B"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="G9T-Mf-Naw" customClass="TableView" customModule="PosInCore">
-                    <rect key="frame" x="0.0" y="244" width="600" height="357"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="45" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="G9T-Mf-Naw" customClass="TableView" customModule="PosInCore">
+                    <rect key="frame" x="0.0" y="321" width="600" height="279"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </tableView>
+                <view alpha="0.64999999999999969" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4jW-Uc-5k3">
+                    <rect key="frame" x="0.0" y="172" width="600" height="48"/>
+                    <color key="backgroundColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="48" id="9Fd-pl-ldK"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$99" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Qb-Kh-vAf">
+                    <rect key="frame" x="8" y="178" width="51" height="36"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="30"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edward Ryan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yjp-Xw-pBL">
+                    <rect key="frame" x="499" y="187" width="93" height="18"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
@@ -73,17 +94,26 @@
                 <constraint firstItem="djR-mn-LSG" firstAttribute="top" secondItem="UuP-rw-UeB" secondAttribute="top" id="1WC-88-6dK"/>
                 <constraint firstAttribute="trailing" secondItem="djR-mn-LSG" secondAttribute="trailing" id="1Yq-Hm-fic"/>
                 <constraint firstItem="G9T-Mf-Naw" firstAttribute="top" secondItem="PoZ-37-1wp" secondAttribute="bottom" id="3By-Kx-cBE"/>
-                <constraint firstItem="PoZ-37-1wp" firstAttribute="top" secondItem="djR-mn-LSG" secondAttribute="bottom" id="7De-zi-QCc"/>
+                <constraint firstAttribute="trailing" secondItem="4jW-Uc-5k3" secondAttribute="trailing" id="3ud-Fq-LkA"/>
+                <constraint firstItem="4jW-Uc-5k3" firstAttribute="centerY" secondItem="8Qb-Kh-vAf" secondAttribute="centerY" id="4Jo-IX-8Cm"/>
+                <constraint firstItem="8Qb-Kh-vAf" firstAttribute="centerY" secondItem="Yjp-Xw-pBL" secondAttribute="centerY" id="4df-ow-Ysa"/>
+                <constraint firstItem="PoZ-37-1wp" firstAttribute="top" secondItem="djR-mn-LSG" secondAttribute="bottom" constant="-70" id="7De-zi-QCc"/>
                 <constraint firstItem="PoZ-37-1wp" firstAttribute="leading" secondItem="UuP-rw-UeB" secondAttribute="leading" id="Kga-45-mKZ"/>
+                <constraint firstAttribute="trailing" secondItem="Yjp-Xw-pBL" secondAttribute="trailing" constant="8" id="YQe-97-6PR"/>
+                <constraint firstItem="4jW-Uc-5k3" firstAttribute="leading" secondItem="UuP-rw-UeB" secondAttribute="leading" id="d1D-Yb-5lR"/>
+                <constraint firstItem="djR-mn-LSG" firstAttribute="bottom" secondItem="4jW-Uc-5k3" secondAttribute="bottom" id="eIH-Am-qjN"/>
                 <constraint firstAttribute="trailing" secondItem="PoZ-37-1wp" secondAttribute="trailing" id="fVc-RH-GId"/>
                 <constraint firstAttribute="bottom" secondItem="G9T-Mf-Naw" secondAttribute="bottom" id="hzz-gE-0uq"/>
                 <constraint firstItem="PoZ-37-1wp" firstAttribute="top" secondItem="djR-mn-LSG" secondAttribute="bottom" id="nqJ-nN-hk5"/>
                 <constraint firstAttribute="trailing" secondItem="G9T-Mf-Naw" secondAttribute="trailing" id="rIP-fY-UzU"/>
+                <constraint firstItem="PoZ-37-1wp" firstAttribute="top" secondItem="4jW-Uc-5k3" secondAttribute="bottom" id="sf7-1O-D7G"/>
+                <constraint firstItem="8Qb-Kh-vAf" firstAttribute="leading" secondItem="UuP-rw-UeB" secondAttribute="leading" constant="8" id="wXd-Sq-Vlw"/>
                 <constraint firstItem="djR-mn-LSG" firstAttribute="leading" secondItem="UuP-rw-UeB" secondAttribute="leading" id="whl-IO-yKR"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="7De-zi-QCc"/>
                     <exclude reference="nqJ-nN-hk5"/>
                 </mask>
             </variation>
