--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -119,9 +119,6 @@
                     <navigationItem key="navigationItem" title="Messages" id="45E-vw-XYB">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="tdQ-rK-BMU"/>
                     </navigationItem>
-                    <connections>
-                        <segue destination="tr4-Tq-w9T" kind="show" id="8OV-WN-0ZF"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4CW-wc-yjP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -141,7 +138,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="OAU-5D-fy1" customClass="TableView" customModule="PosInCore">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -610,7 +607,7 @@
                 <viewController storyboardIdentifier="PromotionDetailsViewControllerId" id="tr4-Tq-w9T" customClass="PromotionDetailsViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r3T-61-MaQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1764" y="1273"/>
+            <point key="canvasLocation" x="1765" y="1263"/>
         </scene>
         <!--Product Inventory-->
         <scene sceneID="Kkc-3q-c1D">
