--- a/PositionIn/NewItems/NewItems.storyboard
+++ b/PositionIn/NewItems/NewItems.storyboard
@@ -145,6 +145,53 @@
             </objects>
             <point key="canvasLocation" x="119" y="1024"/>
         </scene>
+        <!--Edit Profile-->
+        <scene sceneID="d02-5t-Dy8">
+            <objects>
+                <viewController storyboardIdentifier="EditProfileViewController" id="ar9-rL-frm" userLabel="Edit Profile" customClass="EditProfileViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2aj-oH-srM"/>
+                        <viewControllerLayoutGuide type="bottom" id="56t-4P-Wk1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="U1x-jW-yDT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="Whe-I6-BEy">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Whe-I6-BEy" secondAttribute="trailing" id="JdW-5h-jPl"/>
+                            <constraint firstAttribute="bottom" secondItem="Whe-I6-BEy" secondAttribute="bottom" id="MOx-je-XT8"/>
+                            <constraint firstItem="Whe-I6-BEy" firstAttribute="top" secondItem="2aj-oH-srM" secondAttribute="bottom" id="MsC-7q-nNo"/>
+                            <constraint firstItem="Whe-I6-BEy" firstAttribute="leading" secondItem="U1x-jW-yDT" secondAttribute="leading" id="rgm-xs-gjO"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Edit profile" id="I2O-1Q-dsP">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="cjI-h2-n50">
+                            <connections>
+                                <segue destination="giS-Z4-BLu" kind="unwind" identifier="Close" unwindAction="prepareForUnwind:" id="FBm-sG-wS5"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="q57-eP-2H1">
+                            <connections>
+                                <action selector="didTapPost:" destination="ar9-rL-frm" id="OZq-QY-NUw"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="Whe-I6-BEy" id="oeU-WY-w8A"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q23-dy-4KH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="giS-Z4-BLu" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="769" y="1024"/>
+        </scene>
         <!--New Promotion-->
         <scene sceneID="a6q-c8-Teh">
             <objects>
